# class-aware-severity-focal-loss

./: .gitignore  README.md  config.env  pyproject.toml
cafl/: __init__.py  config.py
cafl/adapters/: torchvision_retinanet.py
cafl/examples/: ham10000_ablation.py  ham10000_detection.py  ham10000_split.py  ham10000_train.py  visualize_similarity.py
cafl/logging/: metrics.py
cafl/losses/: cafl.py  focal.py
cafl/utils/: ddp.py  masks.py
cafl/weighting/: effective_number.py  severity.py  similarity.py
notebooks/: prepare_ham10000_labels.ipynb
tests/: test_adapter.py  test_cafl.py  test_effective_number.py  test_focal.py  test_similarity.py
